--- a/docker-taskcat/Dockerfile
+++ b/docker-taskcat/Dockerfile
@@ -2,6 +2,11 @@ FROM taskcat/taskcat
 
 ADD .taskcat.yml /mnt
 ADD mongodb-master.template /mnt
-ENV AWS_ACCESS_KEY_ID="ASIAQVX7CAFHC6K3AHUX"  AWS_SECRET_ACCESS_KEY="lGQOs5N/iFGxAp8K++cbuQ3BoKyXox1F0zZJCIQo"
+ENV AWS_ACCESS_KEY_ID="AKIAT33TEK3R3JCFSRJQ"  AWS_SECRET_ACCESS_KEY="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"
 
 ENTRYPOINT ["taskcat","test","run"]
+
+
+
+
+
