--- a/docker-taskcat/mongodb-master.template
+++ b/docker-taskcat/mongodb-master.template
@@ -1,5 +1,4 @@
 
-
 {
     "AWSTemplateFormatVersion": "2010-09-09",
     "Description": "Deploy MongoDB on a New VPC in AWS",
@@ -167,7 +166,7 @@
         },
         "QSS3BucketName": {
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
-            "Default": "aws-quickstart",
+            "Default": "aws-cn-quickstart",
             "Type": "String",
             "ConstraintDescription": "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
             "Description": "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
@@ -266,9 +265,9 @@
             "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with a hyphen (-)."
         },
         "QSS3BucketRegion": {
-            Default: "us-east-1",
-            Description: "The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value.",
-            Type: "String"
+            "Default": "cn-north-1",
+            "Description": "The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value.",
+            "Type": "String"
         },
         "AvailabilityZones": {
             "Type": "List<AWS::EC2::AvailabilityZone::Name>",
@@ -444,7 +443,7 @@
             {
                 "Ref": "QSS3BucketName"
             },
-            "aws-quickstart"
+            "aws-cn-quickstart"
             ]
         }
     },
@@ -709,5 +708,4 @@
         }
     }
 }
-
 
